2011-05-07  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Ensure pending record is flushed when adding a native
	field (gdal #4073).

2011-04-16  Frank Warmerdam  <warmerdam@pobox.com>

	* shapefil.h: avoid warnings with SHP_CVSID on gcc.

2010-12-06  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: fix read past end of init data fetching code page 
	http://bugzilla.maptools.org/show_bug.cgi?id=2276

2010-07-01  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: do not error out on a shape with zero vertices.

	* shpdump.c: do not crash if null shape returned by read object.

2010-06-29  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: fix sign of Z and M comparisons in SHPCheckObjectContained.
	(http://bugzilla.maptools.org/show_bug.cgi?id=2223)

2010-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c/shapefil.h: Handle the .shp file length limits more
	gracefully. (http://trac.osgeo.org/gdal/ticket/3236)

	* shpopen.c: Improve the numerical accurancy of algorithms in
	SHPRewind() (http://trac.osgeo.org/gdal/ticket/3363).

2010-01-16  Frank Warmerdam  <warmerdam@pobox.com>

	* shpopen.c: support passing in zero/nulls to create an empty
	SHPObject: http://bugzilla.maptools.org/show_bug.cgi?id=2148

2009-10-29  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: avoid crash risk for truncated files.
	http://trac.osgeo.org/gdal/ticket/3093

2009-09-17  Bram de Greve <bram.degreve@bramz.net>

	* shpopen.c: on Win32, define snprintf as alias to _snprintf

2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>

	* shptree.c: improve safety in face of buggy .shp file.
	http://trac.osgeo.org/gdal/ticket/2610

	* dbfopen.c: DBFCreateField() can now also operate on files with
	records, c/o Martin Dobias.
	https://trac.osgeo.org/gdal/ticket/2672

2008-11-11  Frank Warmerdam  <warmerdam@pobox.com>

	* dbfopen.c: Introduce DBFDeleteField() function from Martin Dobias.
	http://trac.osgeo.org/gdal/ticket/2671
